# farm

./: CHANGELOG.md  LICENSE  README.md  farm.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
saves/: new_save  save0  test  Ферма кроликов
src/: Alchemy.hs  Draw.hs  Game.hs  Info.hs  Init.hs  LoadMenu.hs  Main.hs  Perk.hs  Quests.hs  Recipes.hs  Types.hs  Util.hs
