cabal-version:       >=1.10
                     
name:                farm
version:             0.1.0.0
license-file:        LICENSE
author:              freedan42x
maintainer:          danil123550@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable farm
  main-is:             Main.hs
  other-modules:       Types
                     , Util
                     , Quests
                     , Draw
                     , Game
                     , Info
                     , Alchemy
                     , Recipes
                     , Perk
  hs-source-dirs:      src
  ghc-options:         -threaded -Wall -Wextra -Wno-type-defaults
  default-extensions:  LambdaCase
                     , TemplateHaskell
                     , OverloadedStrings
                     , TupleSections
  build-depends:       base >=4.12 && <4.13
                     , brick
                     , vty
                     , microlens
                     , microlens-th
                     , containers
                     , random
                     , vector
  default-language:    Haskell2010
